[package]
name = "memory-mysql-graph"
version = "0.1.0"
edition = "2024"

exclude = ["examples/*"]

[dependencies]
anyhow = "1.0.71"
axum = "0.7.7"
log = "0.4.27"
mysql-binlog-connector-rust = "0.3.2"
mysql_async = { version = "0.34.1", features = ["binlog"] }
petgraph = "0.8.1"
rbatis = { version = "4.5.51" }
rbdc-mysql ={ version = "4.5.17" }

rbs = { version = "4.5.25" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "1.0.69"
tokio = { version = "1.0", features = ["full"] }

